--- a/src/main/resources/assets/mubble/lang/de_de.json
+++ b/src/main/resources/assets/mubble/lang/de_de.json
@@ -1,5 +1,289 @@
 {
-	"itemGroup.mubble_blocks": "Mubble-Blöcke",
+    //CREATIVE TABS
+    "item.mubbleGroup.mubble_block.mubbles": "Mubble-Blöcke",
+    "item.mubbleGroup.mubble_item.mubbles": "Mubble-Gegenstände",
+    "item.mubbleGroup.mubble_costumes": "Mubble-Kostüme",
 
-	"block.mubble.question_block": "?-Block"
+    //block.mubbleS
+    "block.mubble.vanadium_block.mubble": "Vanadium-block.mubble",
+    "block.mubble.vanadium_ore": "Vanadium-Erz",
+    "block.mubble.red_bricks": "Rote Ziegelsteine",
+    "block.mubble.red_brick_stairs": "Rote Ziegeltreppe",
+    "block.mubble.white_bricks": "Weiße Ziegelsteine",
+    "block.mubble.white_brick_stairs": "Weiße Ziegeltreppe",
+    "block.mubble.blunite": "Blunite",
+    "block.mubble.blunite_stairs": "Blunite-Treppe",
+    "block.mubble.blunite_wall": "Blunite-Mauer",
+    "block.mubble.polished_blunite": "Polierter Blunite",
+    "block.mubble.polished_blunite_stairs": "Polierte Blunite-Treppe",
+    "block.mubble.carbonite": "Carbonite",
+    "block.mubble.carbonite_stairs": "Carbonite-Treppe",
+    "block.mubble.carbonite_wall": "Carbonite-Mauer",
+    "block.mubble.polished_carbonite": "Polierter Carbonite",
+    "block.mubble.polished_carbonite_stairs": "Polierte Carbonite-Treppe",
+    "block.mubble.footblock.mubble": "Fußblock.mubble",
+    "block.mubble.white_cloud_block.mubble": "Weißer Wolkenblock.mubble",
+    "block.mubble.light_gray_cloud_block.mubble": "Hellgrauer Wolkenblock.mubble",
+    "block.mubble.gray_cloud_block.mubble": "Grauer Wolkenblock.mubble",
+    "block.mubble.black_cloud_block.mubble": "Schwarzer Wolkenblock.mubble",
+    "block.mubble.tomato": "Tomaten",
+    "block.mubble.salad": "Salat",
+    "block.mubble.cheese_block.mubble": "Käseblock.mubble",
+    "block.mubble.unstable_stone": "Instabiler Stein",
+    "block.mubble.ultimatum_portal": "Ultimatum-Portal",
+    "block.mubble.blue_balloon": "Blauer Luftballon",
+    "block.mubble.light_blue_balloon": "Hellblauer Luftballon",
+    "block.mubble.cyan_balloon": "Türkiser Luftballon",
+    "block.mubble.green_balloon": "Grüner Luftballon",
+    "block.mubble.lime_balloon": "Hellgrüner Luftballon",
+    "block.mubble.yellow_balloon": "Gelber Luftballon",
+    "block.mubble.orange_balloon": "Oranger Luftballon",
+    "block.mubble.red_balloon": "Roter Luftballon",
+    "block.mubble.pink_balloon": "Rosa Luftballon",
+    "block.mubble.magenta_balloon": "Magenta Luftballon",
+    "block.mubble.purple_balloon": "Violetter Luftballon",
+    "block.mubble.brown_balloon": "Bauner Luftballon",
+    "block.mubble.white_balloon": "Weißer Luftballon",
+    "block.mubble.light_gray_balloon": "Hellgrauer Luftballon",
+    "block.mubble.gray_balloon": "Grauer Luftballon",
+    "block.mubble.black_balloon": "Schwarzer Luftballon",
+
+    "block.mubble.question_block.mubble": "?-block.mubble",
+    "block.mubble.empty_block.mubble": "Leerer block.mubble",
+    "block.mubble.rotating_block.mubble": "Rotierender block.mubble",
+    "block.mubble.light_block.mubble": "Leuchtender block.mubble",
+    "block.mubble.brick_block.mubble": "Ziegelstein-block.mubble",
+    "block.mubble.golden_brick_block.mubble": "Goldener Ziegelstein-block.mubble",
+    "block.mubble.note_block.mubble": "Notenblock.mubble",
+    "block.mubble.super_note_block.mubble": "Super Notenblock.mubble",
+    "block.mubble.fire_flower": "Feuerblume",
+    "block.mubble.ice_flower": "Eisblume",
+    "block.mubble.boomerang_flower": "Bumerangblume",
+    "block.mubble.cloud_flower": "Wolkenblume",
+    "block.mubble.gold_flower": "Goldeneblume",
+    "block.mubble.blue_mushroom": "Blauer Pilz",
+    "block.mubble.light_blue_mushroom": "Hellblauer Pilz",
+    "block.mubble.cyan_mushroom": "Türkiser Pilz",
+    "block.mubble.green_mushroom": "Grüner Pilz",
+    "block.mubble.lime_mushroom": "Hellgrüner Pilz",
+    "block.mubble.yellow_mushroom": "Gelber Pilz",
+    "block.mubble.orange_mushroom": "Orangener Pilz",
+    "block.mubble.pink_mushroom": "Pinker Pilz",
+    "block.mubble.magenta_mushroom": "Magenta Pilz",
+    "block.mubble.purple_mushroom": "Violetter Pilz",
+    "block.mubble.white_mushroom": "Weißer Pilz",
+    "block.mubble.light_gray_mushroom": "Hellgrauer Pilz",
+    "block.mubble.gray_mushroom": "Grauer Pilz",
+    "block.mubble.black_mushroom": "Schwarzer Pilz",
+    "block.mubble.blue_mushroom_block.mubble": "Blauer Pilzblock.mubble",
+    "block.mubble.light_blue_mushroom_block.mubble": "Hellblauer Pilzblock.mubble",
+    "block.mubble.cyan_mushroom_block.mubble": "Türkiser Pilzblock.mubble",
+    "block.mubble.green_mushroom_block.mubble": "Grüner Pilzblock.mubble",
+    "block.mubble.lime_mushroom_block.mubble": "Hellgrüner Pilzblock.mubble",
+    "block.mubble.yellow_mushroom_block.mubble": "Gelber Pilzblock.mubble",
+    "block.mubble.orange_mushroom_block.mubble": "Orangener Pilzblock.mubble",
+    "block.mubble.pink_mushroom_block.mubble": "Pinker Pilzblock.mubble",
+    "block.mubble.magenta_mushroom_block.mubble": "Magenta Pilzblock.mubble",
+    "block.mubble.purple_mushroom_block.mubble": "Violetter Pilzblock.mubble",
+    "block.mubble.white_mushroom_block.mubble": "Weißer Pilzblock.mubble",
+    "block.mubble.light_gray_mushroom_block.mubble": "Hellgrauer Pilzblock.mubble",
+    "block.mubble.gray_mushroom_block.mubble": "Grauer Pilzblock.mubble",
+    "block.mubble.black_mushroom_block.mubble": "Schwarzer Pilzblock.mubble",
+
+    "block.mubble.blue_tetris_block.mubble": "Blauer Tetrisblock.mubble",
+    "block.mubble.light_blue_tetris_block.mubble": "Hellblauer Tetrisblock.mubble",
+    "block.mubble.cyan_tetris_block.mubble": "Türkiser Tetrisblock.mubble",
+    "block.mubble.green_tetris_block.mubble": "Grüner Tetrisblock.mubble",
+    "block.mubble.lime_tetris_block.mubble": "Hellgrüner Tetrisblock.mubble",
+    "block.mubble.yellow_tetris_block.mubble": "Gelber Tetrisblock.mubble",
+    "block.mubble.orange_tetris_block.mubble": "Orangener Tetrisblock.mubble",
+    "block.mubble.red_tetris_block.mubble": "Roter Tetrisblock.mubble",
+    "block.mubble.pink_tetris_block.mubble": "Pinker Tetrisblock.mubble",
+    "block.mubble.magenta_tetris_block.mubble": "Magenta Tetrisblock.mubble",
+    "block.mubble.purple_tetris_block.mubble": "Violetter Tetrisblock.mubble",
+    "block.mubble.brown_tetris_block.mubble": "Brauner Tetrisblock.mubble",
+    "block.mubble.white_tetris_block.mubble": "Weißer Tetrisblock.mubble",
+    "block.mubble.light_gray_tetris_block.mubble": "Hellgrauer Tetrisblock.mubble",
+    "block.mubble.gray_tetris_block.mubble": "Grauer Tetrisblock.mubble",
+    "block.mubble.black_tetris_block.mubble": "Schwarzer Tetrisblock.mubble",
+    "block.mubble.tetris_glass": "Tetris-Glas",
+    "block.mubble.japanese_tetris_cushion": "Japanischer Tetris-Kissen",
+    "block.mubble.rainbow_tetris_scaffolding": "Regenbogen-Tetris-Gerüst",
+    "block.mubble.monochrome_tetris_scaffolding": "Einfarbiger Tetris-Gerüst",
+
+    "block.mubble.vampire_stone": "Vampir-Stein",
+    "block.mubble.medusa_stone": "Medusa's Stein",
+    "block.mubble.medusa_bricks": "Medusa's Ziegelsteine",
+    "block.mubble.medusa_brick_stairs": "Medusa's Ziegeltreppe",
+    "block.mubble.blue_candy_cane_pillar": "Blaue Zuckerstangensäule",
+    "block.mubble.light_blue_candy_cane_pillar": "Hellblaue Zuckerstangensäule",
+    "block.mubble.cyan_candy_cane_pillar": "Türkise Zuckerstangensäule",
+    "block.mubble.green_candy_cane_pillar": "Grüne Zuckerstangensäule",
+    "block.mubble.lime_candy_cane_pillar": "Hellblaue Zuckerstangensäule",
+    "block.mubble.yellow_candy_cane_pillar": "Gelbe Zuckerstangensäule",
+    "block.mubble.orange_candy_cane_pillar": "Orangene Zuckerstangensäule",
+    "block.mubble.red_candy_cane_pillar": "Rote Zuckerstangensäule",
+    "block.mubble.pink_candy_cane_pillar": "Pinke Zuckerstangensäule",
+    "block.mubble.magenta_candy_cane_pillar": "Magenta Zuckerstangensäule",
+    "block.mubble.purple_candy_cane_pillar": "Lila Zuckerstangensäule",
+    "block.mubble.brown_candy_cane_pillar": "Braune Zuckerstangensäule",
+    "block.mubble.white_candy_cane_pillar": "Weiße Zuckerstangensäule",
+    "block.mubble.light_gray_candy_cane_pillar": "Hellgraue Zuckerstangensäule",
+    "block.mubble.gray_candy_cane_pillar": "Graue Zuckerstangensäule",
+    "block.mubble.black_candy_cane_pillar": "Schwarze Zuckerstangensäule",
+
+    "block.mubble.green_hill_grass_block.mubble": "Grüner Hügelgrassblock.mubble",
+    "block.mubble.green_hill_dirt": "Grüne Hügelerde",
+    "block.mubble.marble_zone_stone": "Marble-Zonenstein",
+    "block.mubble.yellow_studiopolis_clapper": "Gelbe Studiopolis-Filmklappe",
+    "block.mubble.blue_studiopolis_clapper": "Blaue Studiopolis-Filmklappe",
+    "block.mubble.spring": "Feder",
+
+    "block.mubble.scarlet_grass_block.mubble": "Scharlachroter Grassblock.mubble",
+    "block.mubble.scarlet_grass": "Scharlachrotes Grass",
+    "block.mubble.scarlet_mushroom": "Scharlachroter Pilz",
+    "block.mubble.scarlet_orchid": "Scharlachrote Orchidee",
+
+    "block.mubble.iron_scaffolding": "Eisengerüst",
+    "block.mubble.purple_bricks": "Violette Ziegelsteine",
+    "block.mubble.purple_brick_stairs": "Violette Ziegeltreppe",
+    "block.mubble.cyan_bricks": "Türkise Ziegelsteine",
+    "block.mubble.cyan_brick_stairs": "Türkise Ziegeltreppe",
+    "block.mubble.elder_pebbles": "Elder Pebbles",
+    "block.mubble.space_matter": "Weltraummaterie",
+    "block.mubble.space_obsidian": "Weltraumobsidian",
+
+    "block.mubble.blue_puyo": "Blauer Puyo",
+    "block.mubble.turquoise_puyo": "Türkiser Puyo",
+    "block.mubble.green_puyo": "Grüner Puyo",
+    "block.mubble.yellow_puyo": "Gelber Puyo",
+    "block.mubble.red_puyo": "Roter Puyo",
+    "block.mubble.purple_puyo": "Violetter Puyo",
+    "block.mubble.garbage_puyo": "Müll-Puyo",
+    "block.mubble.point_puyo": "Punkte-Puyo",
+    "block.mubble.hard_puyo": "Harter Puyo",
+    "block.mubble.iron_puyo": "Eisen-Puyo",
+    "block.mubble.puyo_block.mubble": "Puyo-block.mubble",
+
+    "block.mubble.rewind_block.mubble": "Rückspulblock.mubble",
+    "block.mubble.koretato_block.mubble": "Koretato-block.mubble",
+
+    //item.mubbleS
+    "item.mubble.vanadium": "Vanadium",
+    "item.mubble.bandage": "Verband",
+    "item.mubble.wheat_flour": "Weizenmehl",
+    "item.mubble.caramel_cube": "Karamellwürfel",
+    "item.mubble.crepe": "Crêpe",
+    "item.mubble.chocolate_crepe": "Schokoladen-Crêpe",
+    "item.mubble.caramel_crepe": "Karamell-Crêpe",
+    "item.mubble.candy_cane": "Zuckerstange",
+    "item.mubble.burger": "Burger",
+    "item.mubble.tomato": "Tomate",
+    "item.mubble.salad": "Salat",
+    "item.mubble.cheese": "Käse",
+    "item.mubble.totem_of_ascending": "Totem des Aufsteigends",
+
+    "item.mubble.super_mushroom": "Superpilz",
+    "item.mubble.peach": "Pfirsich",
+    "item.mubble.cape_feather": "Federumhang",
+    "item.mubble.super_cape_feather": "Super Federumhang",
+    "item.mubble.super_star": "Superstern",
+    "item.mubble.yellow_coin": "Gelbe Münze",
+    "item.mubble.red_coin": "Rote Münze",
+    "item.mubble.blue_coin": "Blaue Münze",
+
+    "item.mubble.smash_ball": "Smash Ball",
+
+    "item.mubble.annoying_dog": "Nerviger Hund",
+
+    "item.mubble.record_blank": "Leere Schallplatte",
+    "item.mubble.record.champions_road.desc": "Super Mario 3D World - Champion's Road",
+    "item.mubble.record.fly_octo_fly.desc": "Splatoon 2 - Fly Octo Fly",
+    "item.mubble.record.vampire_killer.desc": "Castlevania Judgement - Vampire Killer",
+
+    "item.mubble.record.nb_sweden.desc": "C418 - Sweden (Noteblock.mubble Remix)",
+    "item.mubble.record.nb_buoy_base_galaxy.desc": "Super Mario Galaxy - Buoy Base Galaxy (Noteblock.mubble Remix)",
+    "item.mubble.record.nb_waluigi_pinball.desc": "Mario Kart DS - Waluigi Pinball (Noteblock.mubble Remix)",
+    "item.mubble.record.nb_harvest_hazards.desc": "Donkey Kong Country: Tropical Freeze - Harvest Hazards (Noteblock.mubble Remix)",
+
+    //COSTUMES
+    "item.mubble.headphones": "Kopfhörer",
+    "item.mubble.christmas_hat": "Weihnachtshut",
+
+    "item.mubble.cappy": "Cappy",
+    "item.mubble.luigi_cap": "Luigis Mütze",
+    "item.mubble.wario_cap": "Warios Mütze",
+    "item.mubble.waluigi_cap": "Waluigis Mütze",
+    "item.mubble.vanish_cap": "Vanishs Mütze",
+    "item.mubble.wing_cap": "Wings Mütze",
+    "item.mubble.gooigi_cap": "Gooigi's Mütze",
+    "item.mubble.princess_peach_crown": "Prinzessin Peachs Krone",
+    "item.mubble.princess_daisy_crown": "Prinzessin Daisys Krone",
+    "item.mubble.rosalina_crown": "Rosalina's Krone",
+    "item.mubble.pink_gold_peach_crown": "Peachs Rosagoldene Krone",
+    "item.mubble.super_crown": "Superkrone",
+    "item.mubble.broque_monsieur_head": "Broque Monsieurs Kopf",
+
+    "item.mubble.bandana": "Kopftuch",
+
+    "item.mubble.snorlax_hat": "Snorlaxs Hut",
+
+    "item.mubble.top_hat": "Zylinderhut",
+
+    "item.mubble.ralsei_hat": "Ralseis Hut",
+    "item.mubble.king_round_mask": "Maske von König Round",
+
+    "item.mubble.baldi_head": "Baldis Hut",
+
+    "item.mubble.mayro_cap": "Mayros Mütze",
+    "item.mubble.noteblock.mubble_head": "Notenblock.mubble's Kopf",
+
+    //ENTITIES
+    "entity.toad": "Toad",
+    "entity.chincho": "Chincho",
+
+    //SUBTITLES
+    "subtitles.block.mubble.question_block.mubble.loot.power_up": "?-block.mubble gibt Power-Up",
+    "subtitles.block.mubble.question_block.mubble.loot.coin": "?-block.mubble gibt Münze",
+    "subtitles.block.mubble.note_block.mubble.jump": "Notenblock.mubble genutzt",
+    "subtitles.block.mubble.rewind_block.mubble.disappear": "Rückspulblock.mubble verschwindet",
+    "subtitles.block.mubble.rewind_block.mubble.reappear": "Rückspulblock.mubble erscheint wieder",
+    "subtitles.item.mubble.annoying_dog.disappear": "Nerviger Hund verschwindet",
+    "subtitles.item.mubble.annoying_dog.waf": "Nerviger Hund bellt",
+    "subtitles.item.mubble.cape_feather.use": "Federmütze benutzt",
+    "subtitles.item.mubble.smash_ball.use": "Smash Ball benutzt",
+    "subtitles.costume.cappy.ambient": "Cappy murmelt",
+    "subtitles.costume.cappy.ambient.nether": "Cappy geht der Schwund aus",
+    "subtitles.costume.cappy.equip": "Cappy steigt auf jemands Kopf",
+    "subtitles.costume.cappy.happy": "Cappy murmelt fröhlich",
+    "subtitles.costume.cappy.help": "Cappy bittet um Hilfe",
+    "subtitles.entity.toad.ambient": "Toad murmelt",
+    "subtitles.entity.toad.hurt": "Toad verletzt",
+    "subtitles.entity.toad.death": "Toad stirbt",
+
+    //ADVANCEMENTS
+    "advancements.mubble.root.title": "Mubble",
+    "advancements.mubble.root.description": "Eine großartige neue Reise",
+    "advancements.mubble.get_coin.title": "Es schürft! Gold!",
+    "advancements.mubble.get_coin.description": "Finde Münzen",
+    "advancements.mubble.get_super_crown.title": "Die luxuriöse Behandlung",
+    "advancements.mubble.get_super_crown.description": "Finde eine Super-Krone",
+    "advancements.mubble.get_bandage.title": "Erholung",
+    "advancements.mubble.get_bandage.description": "Erhalte ein Verband",
+    "advancements.mubble.get_all_caps.title": "Super-Sterne",
+    "advancements.mubble.get_all_caps.description": "Stelle alle Mützen her",
+    "advancements.mubble.get_vanadium.title": "Vanadiums!",
+    "advancements.mubble.get_vanadium.description": "Beschaffe vanadiums",
+    "advancements.mubble.get_tetris_block.mubble.title": "Es Ist Alles Verbunden",
+    "advancements.mubble.get_tetris_block.mubble.description": "Halte einen Tetris-block.mubble in deiner Hand",
+
+    //COMMANDS
+    "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
+    "commands.motion.success": "Ändert die Bewegung von %s zu %s, %s, %s",
+
+    //OTHER
+    "item.mubble.cappy.secret_status": "Wie widersprüchlich... :)",
+    "item.mubble.bandana.secret_status": "Das ist für dich, §6Pixel§r!",
+    "item.mubble.noteblock.mubble_head.secret_status": "Hey! Ich dachte, du hättest das schon auf dem Kopf, §6Evan§r!",
+    "item.mubble.mayro_cap.secret_status": "Komm schon, du bist der jenige der es am wenigsten braucht. Bist du's nicht, Mr. \"§6Sossie§r\"?"
 }
