--- a/src/main/resources/assets/mubble/lang/en_gb.json
+++ b/src/main/resources/assets/mubble/lang/en_gb.json
@@ -23,30 +23,30 @@
     "block.mubble.polished_carbonite_stairs": "Polished Carbonite Stairs",
     "block.mubble.footblock.mubble": "Footblock.mubble",
     "block.mubble.white_cloud_block.mubble": "White Cloud block.mubble",
-    "block.mubble.light_gray_cloud_block.mubble": "Light Gray Cloud block.mubble",
-    "block.mubble.gray_cloud_block.mubble": "Gray Cloud block.mubble",
+    "block.mubble.light_gray_cloud_block.mubble": "Light Grey Cloud block.mubble",
+    "block.mubble.gray_cloud_block.mubble": "Grey Cloud block.mubble",
     "block.mubble.black_cloud_block.mubble": "Black Cloud block.mubble",
-    "block.mubble.tomato": "Tomatoes",
-    "block.mubble.salad": "Salad",
-    "block.mubble.cheese_block.mubble": "Cheese block.mubble",
-    "block.mubble.unstable_stone": "Unstable Stone",
-    "block.mubble.ultimatum_portal": "Ultimatum Portal",
-    "block.mubble.blue_balloon": "Blue Balloon",
-    "block.mubble.light_blue_balloon": "Light Blue Balloon",
-    "block.mubble.cyan_balloon": "Cyan Balloon",
-    "block.mubble.green_balloon": "Green Balloon",
-    "block.mubble.lime_balloon": "Lime Balloon",
-    "block.mubble.yellow_balloon": "Yellow Balloon",
-    "block.mubble.orange_balloon": "Orange Balloon",
-    "block.mubble.red_balloon": "Red Balloon",
-    "block.mubble.pink_balloon": "Pink Balloon",
-    "block.mubble.magenta_balloon": "Magenta Balloon",
-    "block.mubble.purple_balloon": "Purple Balloon",
-    "block.mubble.brown_balloon": "Brown Balloon",
-    "block.mubble.white_balloon": "White Balloon",
-    "block.mubble.light_gray_balloon": "Light Gray Balloon",
-    "block.mubble.gray_balloon": "Gray Balloon",
-    "block.mubble.black_balloon": "Black Balloon",
+    //"block.mubble.tomato": "<newline>",
+    //"block.mubble.salad": "<newline>",
+    //"block.mubble.cheese_block.mubble": "<newline>",
+    //"block.mubble.unstable_stone": "<newline>",
+    //"block.mubble.ultimatum_portal": "<newline>",
+    //"block.mubble.blue_balloon": "<newline>",
+    //"block.mubble.light_blue_balloon": "<newline>",
+    //"block.mubble.cyan_balloon": "<newline>",
+    //"block.mubble.green_balloon": "<newline>",
+    //"block.mubble.lime_balloon": "<newline>",
+    //"block.mubble.yellow_balloon": "<newline>",
+    //"block.mubble.orange_balloon": "<newline>",
+    //"block.mubble.red_balloon": "<newline>",
+    //"block.mubble.pink_balloon": "<newline>",
+    //"block.mubble.magenta_balloon": "<newline>",
+    //"block.mubble.purple_balloon": "<newline>",
+    //"block.mubble.brown_balloon": "<newline>",
+    //"block.mubble.white_balloon": "<newline>",
+    //"block.mubble.light_gray_balloon": "<newline>",
+    //"block.mubble.gray_balloon": "<newline>",
+    //"block.mubble.black_balloon": "<newline>",
 
     "block.mubble.question_block.mubble": "? block.mubble",
     "block.mubble.empty_block.mubble": "Empty block.mubble",
@@ -72,8 +72,8 @@
     "block.mubble.magenta_mushroom": "Magenta Mushroom",
     "block.mubble.purple_mushroom": "Purple Mushroom",
     "block.mubble.white_mushroom": "White Mushroom",
-    "block.mubble.light_gray_mushroom": "Light Gray Mushroom",
-    "block.mubble.gray_mushroom": "Gray Mushroom",
+    "block.mubble.light_gray_mushroom": "Light Grey Mushroom",
+    "block.mubble.gray_mushroom": "Grey Mushroom",
     "block.mubble.black_mushroom": "Black Mushroom",
     "block.mubble.blue_mushroom_block.mubble": "Blue Mushroom block.mubble",
     "block.mubble.light_blue_mushroom_block.mubble": "Light Blue Mushroom block.mubble",
@@ -86,26 +86,26 @@
     "block.mubble.magenta_mushroom_block.mubble": "Magenta Mushroom block.mubble",
     "block.mubble.purple_mushroom_block.mubble": "Purple Mushroom block.mubble",
     "block.mubble.white_mushroom_block.mubble": "White Mushroom block.mubble",
-    "block.mubble.light_gray_mushroom_block.mubble": "Light Gray Mushroom block.mubble",
-    "block.mubble.gray_mushroom_block.mubble": "Gray Mushroom block.mubble",
+    "block.mubble.light_gray_mushroom_block.mubble": "Light Grey Mushroom block.mubble",
+    "block.mubble.gray_mushroom_block.mubble": "Grey Mushroom block.mubble",
     "block.mubble.black_mushroom_block.mubble": "Black Mushroom block.mubble",
 
-    "block.mubble.blue_tetris_block.mubble": "Blue Tetris block.mubble",
-    "block.mubble.light_blue_tetris_block.mubble": "Light Blue Tetris block.mubble",
-    "block.mubble.cyan_tetris_block.mubble": "Cyan Tetris block.mubble",
-    "block.mubble.green_tetris_block.mubble": "Green Tetris block.mubble",
-    "block.mubble.lime_tetris_block.mubble": "Lime Tetris block.mubble",
-    "block.mubble.yellow_tetris_block.mubble": "Yellow Tetris block.mubble",
-    "block.mubble.orange_tetris_block.mubble": "Orange Tetris block.mubble",
-    "block.mubble.red_tetris_block.mubble": "Red Tetris block.mubble",
-    "block.mubble.pink_tetris_block.mubble": "Pink Tetris block.mubble",
-    "block.mubble.magenta_tetris_block.mubble": "Magenta Tetris block.mubble",
-    "block.mubble.purple_tetris_block.mubble": "Purple Tetris block.mubble",
-    "block.mubble.brown_tetris_block.mubble": "Brown Tetris block.mubble",
-    "block.mubble.white_tetris_block.mubble": "White Tetris block.mubble",
-    "block.mubble.light_gray_tetris_block.mubble": "Light Gray Tetris block.mubble",
-    "block.mubble.gray_tetris_block.mubble": "Gray Tetris block.mubble",
-    "block.mubble.black_tetris_block.mubble": "Black Tetris block.mubble",
+    //"block.mubble.blue_tetris_block.mubble": "<newline>",
+    //"block.mubble.light_blue_tetris_block.mubble": "<newline>",
+    //"block.mubble.cyan_tetris_block.mubble": "<newline>",
+    //"block.mubble.green_tetris_block.mubble": "<newline>",
+    //"block.mubble.lime_tetris_block.mubble": "<newline>",
+    //"block.mubble.yellow_tetris_block.mubble": "<newline>",
+    //"block.mubble.orange_tetris_block.mubble": "<newline>",
+    //"block.mubble.red_tetris_block.mubble": "<newline>",
+    //"block.mubble.pink_tetris_block.mubble": "<newline>",
+    //"block.mubble.magenta_tetris_block.mubble": "<newline>",
+    //"block.mubble.purple_tetris_block.mubble": "<newline>",
+    //"block.mubble.brown_tetris_block.mubble": "<newline>",
+    //"block.mubble.white_tetris_block.mubble": "<newline>",
+    //"block.mubble.light_gray_tetris_block.mubble": "<newline>",
+    //"block.mubble.gray_tetris_block.mubble": "<newline>",
+    //"block.mubble.black_tetris_block.mubble": "<newline>",
     "block.mubble.tetris_glass": "Tetris Glass",
     "block.mubble.japanese_tetris_cushion": "Japanese Tetris Cushion",
     "block.mubble.rainbow_tetris_scaffolding": "Rainbow Tetris Scaffolding",
@@ -128,21 +128,21 @@
     "block.mubble.purple_candy_cane_pillar": "Purple Candy Cane Pillar",
     "block.mubble.brown_candy_cane_pillar": "Brown Candy Cane Pillar",
     "block.mubble.white_candy_cane_pillar": "White Candy Cane Pillar",
-    "block.mubble.light_gray_candy_cane_pillar": "Light Gray Candy Cane Pillar",
-    "block.mubble.gray_candy_cane_pillar": "Gray Candy Cane Pillar",
+    "block.mubble.light_gray_candy_cane_pillar": "Light Grey Candy Cane Pillar",
+    "block.mubble.gray_candy_cane_pillar": "Grey Candy Cane Pillar",
     "block.mubble.black_candy_cane_pillar": "Black Candy Cane Pillar",
 
-    "block.mubble.green_hill_grass_block.mubble": "Green Hill Grass block.mubble",
-    "block.mubble.green_hill_dirt": "Green Hill Dirt",
-    "block.mubble.marble_zone_stone": "Marble Zone Stone",
-    "block.mubble.yellow_studiopolis_clapper": "Yellow Studiopolis Clapper",
-    "block.mubble.blue_studiopolis_clapper": "Blue Studiopolis Clapper",
-    "block.mubble.spring": "Spring",
+    //"block.mubble.green_hill_grass_block.mubble": "<newline>",
+    //"block.mubble.green_hill_dirt": "<newline>",
+    //"block.mubble.marble_zone_stone": "<newline>",
+    //"block.mubble.yellow_studiopolis_clapper": "<newline>",
+    //"block.mubble.blue_studiopolis_clapper": "<newline>",
+    //"block.mubble.spring": "<newline>",
 
-    "block.mubble.scarlet_grass_block.mubble": "Scarlet Grass block.mubble",
-    "block.mubble.scarlet_grass": "Scarlet Grass",
+    //"block.mubble.scarlet_grass_block.mubble": "<newline>",
+    //"block.mubble.scarlet_grass": "<newline>",
     "block.mubble.scarlet_mushroom": "Scarlet Mushroom",
-    "block.mubble.scarlet_orchid": "Scarlet Orchid",
+    //"block.mubble.scarlet_orchid": "<newline>",
 
     "block.mubble.iron_scaffolding": "Iron Scaffolding",
     "block.mubble.purple_bricks": "Purple Bricks",
@@ -151,21 +151,21 @@
     "block.mubble.cyan_brick_stairs": "Cyan Brick Stairs",
     "block.mubble.elder_pebbles": "Elder Pebbles",
     "block.mubble.space_matter": "Space Matter",
-    "block.mubble.space_obsidian": "Space Obsidian",
+    //"block.mubble.space_obsidian": "<newline>",
 
-    "block.mubble.blue_puyo": "Blue Puyo",
-    "block.mubble.turquoise_puyo": "Turquoise Puyo",
-    "block.mubble.green_puyo": "Green Puyo",
-    "block.mubble.yellow_puyo": "Yellow Puyo",
-    "block.mubble.red_puyo": "Red Puyo",
-    "block.mubble.purple_puyo": "Purple Puyo",
-    "block.mubble.garbage_puyo": "Garbage Puyo",
-    "block.mubble.point_puyo": "Point Puyo",
-    "block.mubble.hard_puyo": "Hard Puyo",
-    "block.mubble.iron_puyo": "Iron Puyo",
-    "block.mubble.puyo_block.mubble": "Puyo block.mubble",
+    //"block.mubble.blue_puyo": "<newline>",
+    //"block.mubble.turquoise_puyo": "<newline>",
+    //"block.mubble.green_puyo": "<newline>",
+    //"block.mubble.yellow_puyo": "<newline>",
+    //"block.mubble.red_puyo": "<newline>",
+    //"block.mubble.purple_puyo": "<newline>",
+    //"block.mubble.garbage_puyo": "<newline>",
+    //"block.mubble.point_puyo": "<newline>",
+    //"block.mubble.hard_puyo": "<newline>",
+    //"block.mubble.iron_puyo": "<newline>",
+    //"block.mubble.puyo_block.mubble": "<newline>",
 
-    "block.mubble.rewind_block.mubble": "Rewind block.mubble",
+    //"block.mubble.rewind_block.mubble": "<newline>",
     "block.mubble.koretato_block.mubble": "Koretato block.mubble",
 
     //item.mubbleS
@@ -178,15 +178,15 @@
     "item.mubble.caramel_crepe": "Caramel Crêpe",
     "item.mubble.candy_cane": "Candy Cane",
     "item.mubble.burger": "Burger",
-    "item.mubble.tomato": "Tomato",
-    "item.mubble.salad": "Salad",
-    "item.mubble.cheese": "Cheese",
-    "item.mubble.totem_of_ascending": "Totem of Ascending",
+    //"item.mubble.tomato": "<newline>",
+    //"item.mubble.salad": "<newline>",
+    //"item.mubble.cheese": "<newline>",
+    //"item.mubble.totem_of_ascending": "<newline>",
 
     "item.mubble.super_mushroom": "Super Mushroom",
     "item.mubble.peach": "Peach",
     "item.mubble.cape_feather": "Cape Feather",
-    "item.mubble.super_cape_feather": "Super Cape Feather",
+    //"item.mubble.super_cape_feather": "<newline>",
     "item.mubble.super_star": "Super Star",
     "item.mubble.yellow_coin": "Yellow Coin",
     "item.mubble.red_coin": "Red Coin",
@@ -208,7 +208,7 @@
 
     //COSTUMES
     "item.mubble.headphones": "Headphones",
-    "item.mubble.christmas_hat": "Christmas Hat",
+    //"item.mubble.christmas_hat": "<newline>",
 
     "item.mubble.cappy": "Cappy",
     "item.mubble.luigi_cap": "Luigi Cap",
@@ -219,21 +219,21 @@
     "item.mubble.gooigi_cap": "Gooigi's Cap",
     "item.mubble.princess_peach_crown": "Princess Peach's Crown",
     "item.mubble.princess_daisy_crown": "Princess Daisy's Crown",
-    "item.mubble.rosalina_crown": "Rosalina's Crown",
+    //"item.mubble.rosalina_crown": "<newline>",
     "item.mubble.pink_gold_peach_crown": "Pink Gold Peach's Crown",
     "item.mubble.super_crown": "Super Crown",
-    "item.mubble.broque_monsieur_head": "Broque Monsieur's Head",
+    //"item.mubble.broque_monsieur_head": "<newline>",
 
     "item.mubble.bandana": "Bandana",
 
-    "item.mubble.snorlax_hat": "Snorlax Hat",
+    //"item.mubble.snorlax_hat": "<newline>",
 
-    "item.mubble.top_hat": "Top Hat",
+    //"item.mubble.top_hat": "<newline>",
 
     "item.mubble.ralsei_hat": "Ralsei's Hat",
-    "item.mubble.king_round_mask": "King Round Mask",
+    //"item.mubble.king_round_mask": "<newline>",
 
-    "item.mubble.baldi_head": "Baldi's Head",
+    //"item.mubble.baldi_head": "<newline>",
 
     "item.mubble.mayro_cap": "Mayro's Cap",
     "item.mubble.noteblock.mubble_head": "Noteblock.mubble's Head",
@@ -245,18 +245,18 @@
     //SUBTITLES
     "subtitles.block.mubble.question_block.mubble.loot.power_up": "? block.mubble drops power up",
     "subtitles.block.mubble.question_block.mubble.loot.coin": "? block.mubble drops coin",
-    "subtitles.block.mubble.note_block.mubble.jump": "Note block.mubble used",
-    "subtitles.block.mubble.rewind_block.mubble.disappear": "Rewind block.mubble disappears",
-    "subtitles.block.mubble.rewind_block.mubble.reappear": "Rewind block.mubble reappears",
-    "subtitles.item.mubble.annoying_dog.disappear": "Annoying Dog disappears",
-    "subtitles.item.mubble.annoying_dog.waf": "Annoying Dog barks",
+    //"subtitles.block.mubble.note_block.mubble.jump": "<newline>",
+    //"subtitles.block.mubble.rewind_block.mubble.disappear": "<newline>",
+    //"subtitles.block.mubble.rewind_block.mubble.reappear": "<newline>",
+    //"subtitles.item.mubble.annoying_dog.disappear": "<newline>",
+    //"subtitles.item.mubble.annoying_dog.waf": "<newline>",
     "subtitles.item.mubble.cape_feather.use": "Cape Feather used",
     "subtitles.item.mubble.smash_ball.use": "Smash Ball used",
-    "subtitles.costume.cappy.ambient": "Cappy mumbles",
-    "subtitles.costume.cappy.ambient.nether": "Cappy running out of steam",
-    "subtitles.costume.cappy.equip": "Cappy got on someone's head",
-    "subtitles.costume.cappy.happy": "Cappy enjoingly mumbles",
-    "subtitles.costume.cappy.help": "Cappy asks for help",
+    //"subtitles.costume.cappy.ambient": "<newline>",
+    //"subtitles.costume.cappy.ambient.nether": "<newline>",
+    //"subtitles.costume.cappy.equip": "<newline>",
+    //"subtitles.costume.cappy.happy": "<newline>",
+    //"subtitles.costume.cappy.help": "<newline>",
     "subtitles.entity.toad.ambient": "Toad mumbles",
     "subtitles.entity.toad.hurt": "Toad hurts",
     "subtitles.entity.toad.death": "Toad dies",
@@ -279,7 +279,7 @@
 
     //COMMANDS
     "commands.motion.usage": "/motion <entity> <set|add> [dX] [dY] [dZ]",
-    "commands.motion.success": "Changed the motion of %s to %s, %s, %s",
+    //"commands.motion.success": "<newline>",
 
     //OTHER
     "item.mubble.cappy.secret_status": "How paradoxal... :)",
